# Hopper_ROS

./: .gitignore  LICENSE.md  README.md  cloc_run  install_depend  loc_run
hopper_bringup/: CMakeLists.txt  package.xml
hopper_bringup/launch/: display.launch  display_slam.launch  emotion_usb_wake.launch  emotion_wake.launch  hopper_wake.launch  hopper_wake_joy.launch  hopper_wake_steam.launch  laser_wake.launch  mapping.launch  navigation_wake.launch  sensors_wake.launch  teleop.launch
hopper_bringup/launch/description/: description.launch
hopper_bringup/launch/remote/: display.launch  display_octo.launch  display_slam.launch  gmapping.launch  leap_controller.launch  navigation_wake.launch  octo_mapping.launch  remote_stereo_cameras.launch  teleop.launch
hopper_bringup/launch/sensors/: emotion_wake.launch  face_tracking.launch  laser_wake.launch  raspicam.launch  stereo_cameras.launch
hopper_bringup/launch/testing/: emotion_usb_wake.launch  face_detection_test.launch  hexapod_leg_display.launch  imu_test_wake.launch  laser_assemble.launch  octmap_test.launch  simulation.launch  test.launch  (+4 more)
hopper_climber/: CMakeLists.txt  package.xml
hopper_controller/: CMakeLists.txt  README.md  package.xml  setup.py
hopper_controller/msg/: BodyMotorPositions.msg  FoldCommand.msg  HexapodLegPositions.msg  HexapodMotorPositions.msg  HopperMotorPositions.msg  LegMotorPositions.msg  MotorCompSpeedCommand.msg  MotorCompliance.msg  MotorGoalPosition.msg  MotorSpeed.msg  MotorTorque.msg  SingleLegCommand.msg  StandCommand.msg  TorqueCommand.msg
hopper_controller/params/: hexapod.yaml  old_hexapod.yaml
hopper_controller/scripts/: dynamixel_diagnostic_tool.py  hexapod_servo_id_manager.py  imu_checker.py  move_legs_test  servo_id_remapper.py
hopper_controller/src/: body_controller.py  body_controller_node.py  dynamixel_diagnostic_tool.py  dynamixel_driver.py  dynamixel_functions.py  dynamixel_test.py  hexapod_controller.py  hexapod_gait_engine.py  hexapod_ik_driver.py  hexapod_servo_id_manager.py  hexapod_test.py  hopper_leg_position_reader_node.py  ik_controller_node.py  ik_driver_test.py  listener.py  quadruped_controller.py  quadruped_gait_engine.py  quadruped_ik_driver.py  quadruped_test.py  servo_id_remapper.py  talker.py
hopper_controller/srv/: MoveBodyRelative.srv  MoveCoreToPosition.srv  MoveLegsToPosition.srv  MoveLegsToRelativePosition.srv  MoveLegsUntilCollision.srv  ReadCurrentLegPositions.srv  ReadHexapodLegPositions.srv  ReadHexapodMotorPositions.srv  ReadMotorPosition.srv
hopper_description/: CMakeLists.txt  package.xml
hopper_description/meshes/: hopper_leg_coxa.stl  hopper_leg_femur.stl  hopper_leg_tibia.stl
hopper_description/rviz/: navigation.rviz  odom_testing.rviz  urdf.rviz
hopper_description/urdf/: hopper.urdf  hopper.xacro  hopper.xarco  old_hopper.xacro  old_hopper.xarco
hopper_emotion/: .gitignore  CMakeLists.txt  package.xml
hopper_emotion/msg/: DetectedFace.msg  FaceDetectionImage.msg  NameAndPersonId.msg
hopper_emotion/src/: .gitignore  EmotionController.py  EmotionSwitchDetector.py  EmotionalReactionController.py  FaceApiUsersDatabase.py  FaceGroupCreator.py  FaceIdentificator.py  NewFaceDetector.py  app.js  facedetection_interface.js  package-lock.json  package.json
hopper_emotion_core/: CMakeLists.txt  package.xml
hopper_emotion_core/msg/: DetectedFace.msg  EmotionChange.msg  Emotions.msg  FaceAttributes.msg  FaceRectangle.msg
hopper_emotion_core/src/: EmotionController.py  EmotionSwitchDetector.py  EmotionalReactionController.py  FaceGroupCreator.py  FaceIdentificator.py
hopper_emotion_core/srv/: GetNameByPersonId.srv  GetPersonIdByName.srv
hopper_emotion_web/: CMakeLists.txt  package.xml
hopper_emotion_web/src/: app.js  facedetection_interface.js  index.html  package-lock.json  package.json
hopper_face/: CMakeLists.txt  package.xml
hopper_face/src/: face_controller.py
hopper_face_detection/: CMakeLists.txt  package.xml
hopper_face_detection/src/: face_follower.py  faces.py  ros_faces.py
hopper_feet_sensors/: CMakeLists.txt  package.xml
hopper_feet_sensors/msg/: FeetSensorData.msg
hopper_feet_sensors/scripts/: publish_fake_sensor_data
hopper_feet_sensors/src/: feet_sensor_controller.py  feet_sensor_visualizer.py
hopper_idle_animation/: CMakeLists.txt  package.xml
hopper_idle_animation/src/: idle_animation_controller.py  robot_abudction_detector.py
hopper_keep_alive/: CMakeLists.txt  package.xml
hopper_keep_alive/src/: keep_alive_node.py
hopper_laser/: CMakeLists.txt  package.xml
hopper_laser/scripts/: pointcloud_to_csv.py  pointcloud_to_mqtt.py
hopper_laser/src/: laser_scanner.py
hopper_laser/srv/: HopperScan.srv
hopper_leap/: CMakeLists.txt  package.xml
hopper_leap/src/: leap_listener.py
hopper_msgs/: CMakeLists.txt  package.xml
hopper_msgs/msg/: HaltCommand.msg  HexapodTelemetrics.msg  HexapodTelemetry.msg  HopperMoveCommand.msg  ServoTelemetry.msg  SonarSweep.msg  WalkingMode.msg
hopper_navigation/: CMakeLists.txt  package.xml
hopper_navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
hopper_navigation/src/: odometry_merger.py
hopper_obstacle_detector/: CMakeLists.txt  package.xml
hopper_obstacle_detector/src/: obstacle_detector.cpp
hopper_obstacle_detector/srv/: CastRay.srv
hopper_open_mct/: CMakeLists.txt  package.xml
hopper_open_mct/src/: .gitignore  app.js  package-lock.json  package.json
hopper_sonar/: CMakeLists.txt  package.xml
hopper_sonar/src/: app.js  index.html  package.json
hopper_speech/: CMakeLists.txt  package.xml
hopper_speech/scripts/: env_car.txt  ros_file_creator.py  soundFiles.json  speech_test.py
hopper_speech/src/: battery_status_monitor.py  cloud_speech.py  fake_battery_simulator.py  hacklab_speak.py  hopper_speech_node.py  r2d2_speak.py
hopper_steamcontroller/: CMakeLists.txt  package.xml
hopper_steamcontroller/src/: controller_node.py
hopper_system_telemetry/: CMakeLists.txt  package.xml
hopper_system_telemetry/src/: hopper_system_telemetry.py
(+105 files in other folders)
