<?xml version="1.0"?>
<package format="2">
  <name>hopper_bringup</name>
  <version>0.0.0</version>
  <description>The hopper_bringup package</description>
  <maintainer email="dweis7@gmail.com">ubuntu</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_export_depend>roslaunch</build_export_depend>
  <exec_depend>roslaunch</exec_depend>

</package>
