<?xml version="1.0"?>
<package format="2">
  <name>hopper_description</name>
  <version>0.0.0</version>
  <description>The hopper_description package</description>

  <maintainer email="dweis7@gmail.com">dweis</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
</package>
