<?xml version="1.0"?>
<package format="2">
  <name>hopper_emotion_web</name>
  <version>0.0.0</version>
  <description>The hopper_emotion_web package</description>

  <maintainer email="dweis7@gmail.com">ubuntu</maintainer>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
  <depend>hopper_emotion_core</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
