<?xml version="1.0"?>
<package format="2">
  <name>hopper_feet_sensors</name>
  <version>0.0.0</version>
  <description>The hopper_feet_sensors package</description>

  <maintainer email="dweis7@gmail.com">dweis</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <export>

  </export>
</package>
