<?xml version="1.0"?>
<package format="2">
  <name>hopper_idle_animation</name>
  <version>0.0.0</version>
  <description>The hopper_idle_animation package</description>

  <maintainer email="me@DavidMakesRobots.com">David Weis</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>hopper_controller</build_depend>
  <build_depend>hopper_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>hopper_controller</build_export_depend>
  <build_export_depend>hopper_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>hopper_controller</exec_depend>
  <exec_depend>hopper_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>

  </export>
</package>
