<?xml version="1.0"?>
<package format="2">
  <name>hopper_leap</name>
  <version>0.0.0</version>
  <description>The hopper_leap package</description>

  <maintainer email="dweis7@gmail.com">David Weis</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>leap_motion</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>leap_motion</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>leap_motion</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <depend>tf</depend>

  <export>

  </export>
</package>
