<?xml version="1.0"?>
<package format="2">
  <name>hopper_navigation</name>
  <version>0.0.0</version>
  <description>The hopper_navigation package</description>
  <maintainer email="dweis7@gmail.com">dweis</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>move_base</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>move_base</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <depend>rospy</depend>

</package>
