<?xml version="1.0"?>
<package format="2">
  <name>hopper_sonar</name>
  <version>0.0.0</version>
  <description>The hopper_sonar package</description>

  <maintainer email="dweis7@gmail.com">dweis</maintainer>

  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <depend>hopper_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
