<?xml version="1.0"?>
<package format="2">
  <name>hopper_steamcontroller</name>
  <version>0.0.0</version>
  <description>The hopper_steamcontroller package</description>
  <maintainer email="dweis7@gmail.com">dweis</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <depend>hopper_msgs</depend>
  <depend>hopper_laser</depend>
  <depend>hopper_controller</depend>

</package>
